.provarCaches/00D410000011HE0EAM/objects/rstk__soinvdistdim__c.object
<CustomObject>
    <description>soinvdistdim__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_acct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Account Number</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>syacc_acct_soinvdistdim</relationshipLabel>
        <relationshipName>syacc_acct_soinvdistdim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_arsource__c</fullName>
        <label>AR Posting Source</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_dimval1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Value 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_dimval2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Value 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_dimval3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dimension Value 3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_drorcr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Debit or Credit Balance</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Inv Acct Dimensioned Distrib. Summaries</relationshipLabel>
        <relationshipName>soinvdistdims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_invoice__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Invoice Number</label>
        <referenceTo>rstk__soinv__c</referenceTo>
        <relationshipLabel>Inv Acct Dimensioned Distrib. Summaries</relationshipLabel>
        <relationshipName>Inv_Acct_Dimensioned_Distrib_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Inv Acct Dimensioned Distrib. Summaries</relationshipLabel>
        <relationshipName>soinvdistdims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_pjprojwbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the Project Charge (Job) Code from the Invoice Line associated with this distribution</inlineHelpText>
        <label>Project Charge Code</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>Inv Acct Dimensioned Distrib. Summaries</relationshipLabel>
        <relationshipName>soinvdistdims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__soinvdistdim_syvatclass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When the Account Distribution Summary is created for VAT, this field carries the associated VAT Class</inlineHelpText>
        <label>Associated VAT Class</label>
        <referenceTo>rstk__syvatclass__c</referenceTo>
        <relationshipLabel>Inv Acct Dimensioned Distrib. Summaries</relationshipLabel>
        <relationshipName>Inv_Acct_Dimensioned_Distrib_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inv Acct Dimensioned Distrib. Summary</label>
    <listViews>
        <fullName>rstk__RS_Inv_Acct_Dimensioned_Distrib_Summ</fullName>
        <columns>NAME</columns>
        <columns>rstk__soinvdistdim_invoice__c</columns>
        <columns>rstk__soinvdistdim_acct__c</columns>
        <columns>rstk__soinvdistdim_amount__c</columns>
        <columns>rstk__soinvdistdim_drorcr__c</columns>
        <columns>rstk__soinvdistdim_arsource__c</columns>
        <columns>rstk__soinvdistdim_dimval1__c</columns>
        <columns>rstk__soinvdistdim_dimval2__c</columns>
        <columns>rstk__soinvdistdim_dimval3__c</columns>
        <columns>rstk__soinvdistdim_dimval4__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Inv Acct Dimensioned Distrib. Summaries</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Rstk</fullName>
        <columns>NAME</columns>
        <columns>rstk__soinvdistdim_invoice__c</columns>
        <columns>rstk__soinvdistdim_acct__c</columns>
        <columns>rstk__soinvdistdim_amount__c</columns>
        <columns>rstk__soinvdistdim_drorcr__c</columns>
        <columns>rstk__soinvdistdim_dimval1__c</columns>
        <columns>rstk__soinvdistdim_dimval2__c</columns>
        <columns>rstk__soinvdistdim_dimval3__c</columns>
        <columns>rstk__soinvdistdim_dimval4__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Rstk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Inv Acct Dimensioned Distrib. Summary Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inv Acct Dimensioned Distrib. Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>